# zorduzd

./: .gitignore  Cargo.toml  LICENSE.md  Readme.md  build.rs  release.toml  zorduzd.sln
.github/workflows/: ci.yml
assets/: aircraft_mapping.cfg
moza_aircraft_database/: NO_A19_Brawler.json  NO_AB4_Alkyon.json  NO_CI22_Cricket.json  NO_EW25_Medusa.json  NO_F16_Mod_INCOMPLETE.json  NO_F99_Shrike_Mod_INCOMPLETE.json  NO_FS12_Revoker.json  NO_FS20_Vortex.json  NO_FS3_Ternion_INCOMPLETE.json  NO_FS41_Eclipse_INCOMPLETE.json  NO_KR67_Ifrit.json  NO_MC260_Chimera_INCOMPLETE.json  NO_RAH72_Knockout_Mod_INCOMPLETE.json  NO_SAH46_Chicane.json  NO_SFB81_Darkreach.json  NO_TA30_Compass.json  NO_UH90_Ibis.json  NO_VL49_Tarantula.json
scripts/: release.py
src/: Directory.Build.props  Plugin.cs  aircrafts.rs  app.rs  lib.rs  main.rs  model.rs  worker.rs  zorduzd.csproj
