[package]
name = "zorduzd"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3.23"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "DCS"
path = "src/main.rs"
