[package]
name = "zorduzd"
description = "FFB support mod for Moza AB6 for Nuclear Option"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = { version = "1.1.2", features = ["serde"] }
tracing-subscriber = "0.3.23"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "DCS"
path = "src/main.rs"
